--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Eddie Crochet's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <img src="Resume.pdf" style="width:100%; height:100%;" frameborder="0"></img>
   </body>
 </html>
