img src for pdf was not working looks weird for now but had to switch back to iframes for the pdf link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Eddie Crochet's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <img src="Resume.pdf" style="width:100%; height:100%;" frameborder="0"></img>
+    <iframe style="width:100%; height:100%; margin:0;" src="https://docs.google.com/document/d/e/2PACX-1vTzKa59wVTzQy3h0y7dbZwM0nfDnHtoQ0eYH6_TLLN8JnNQAbReQJfcZ2o75ddmUH31sLNwK6fsAgB0/pub?embedded=true"></iframe>
   </body>
 </html>
